<resources>
    <string name="app_name">SmartGarden</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Analisis</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_settings">Ajustes</string>
    <string name="logo">Logo</string>
    <string name="title_activity_login">Inicio de sesión</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registro">¿Aun no se ha registrado?</string>
    <string name="recuperar">¿Olvidaste tu contraseña?</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo</string>
    <string name="registrarse">Registrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editar_datos">Editar datos</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="confirm_passw">Confirmar contraseña</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="title_shops">Compras</string>
    <string name="descripcion">"Vamos a conectarnos con lo natural, con la magia de los procesos y la oportunidad de tenerlos en nuestras manos"</string>
    <string name="desde_2021">- Desde 2021 -</string>
    <string name="icono_notificacion">Icono notificacion</string>
    <string name="titulo_notificacion">Titulo notificacion</string>
    <string name="atras">Atras</string>
    <string name="siguiente">Siguiente</string>
    <string name="volver">Volver</string>
    <string name="titulo">Cosechar área 1</string>
    <string name="noti_descripcion">Despues de todo su arduo trabajo, tiempo y dedicación al cultivar sus frutas y verduras durante la temporada, recordad cuándo debe cosecharlas es tan importante como cultivarlas.</string>
    <string name="title_analisis">Area de cultivo 1</string>
    <string name="server_api">http://192.168.4.1/ApiRest/</string>
    <string name="no_hay_datos_para_mostrar">No hay datos para mostrar</string>
    <string name="ultimos_datos">Ultimos datos</string>
    <string-array name="graficas_individual">
        <item>Temperatura suelo</item>
        <item>Temperatura aire</item>
        <item>Humedad suelo</item>
        <item>Humedad aire</item>
        <item>Luminosidad</item>
    </string-array>
    <string-array name="graficas_combinada">
        <item>Temperatura suelo vs Temperatura aire </item>
        <item>Humedad suelo vs Humedad aire</item>
    </string-array>
</resources>