<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="162dp">

        <ImageView
            android:id="@+id/ImgLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_launcher_foreground" />

        <EditText
            android:id="@+id/TxtUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/TxtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/TxtRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/registro"
            android:textAllCaps="false"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/TxtRecuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/recuperar"
            android:textAllCaps="false"
            android:textColor="#000000" />

        <Button
            android:id="@+id/BtnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:backgroundTint="@color/black"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/ingresar"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="40dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>