<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.EditarDFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ImgLogo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />

            <EditText
                android:id="@+id/TxtUsuarioE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:drawableEnd="@drawable/ic_person_blue_24dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/usuario"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/TxtNombreE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:drawableEnd="@drawable/ic_text_blue_24dp"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/TxtCorreoE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:drawableEnd="@drawable/ic_email_blue_24dp"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/TxtPasswordE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:drawableEnd="@drawable/ic_key_blue_24dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/TxtPasswordConfirmE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:drawableEnd="@drawable/ic_key_blue_24dp"
                android:ems="10"
                android:hint="@string/confirm_passw"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/BtnGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="70dp"
                android:backgroundTint="@color/green_light"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/guardar_cambios"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>