<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />

            <Button
                android:id="@+id/BtnEditarDatos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:backgroundTint="@color/green_light"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/editar_datos"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/BtnOpcion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:backgroundTint="@color/green_light"
                android:clickable="false"
                android:gravity="center"
                android:padding="15dp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/BtnOpcion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:backgroundTint="@color/green_light"
                android:clickable="false"
                android:gravity="center"
                android:padding="15dp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/BtnOpcion4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:backgroundTint="@color/green_light"
                android:clickable="false"
                android:gravity="center"
                android:padding="15dp"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/BtnCerrarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="70dp"
                android:backgroundTint="@color/blue"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/cerrar_sesion"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="20dp"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>